# s21_SmartCalc2

./: Dockerfile_ubuntu
src/: CMakeLists copy.txt  CMakeLists.txt  Makefile  bonus_part.c  calc_rpn.c  credit_calc.cpp  credit_calc.h  credit_calc.ui  deposit_calc.cpp  deposit_calc.h  dist_script.sh  doxygen.config  entry_point.cc  entry_point.cpp  exampleMain.cpp  install_googletest.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  parcer.c  readme.html  stack.c  test.c
src/controller/: CMakeLists.txt  controller.cc  controller.h
src/model/: CMakeLists.txt  SmartCalc.h  bonus_model.cc  bonus_model1.cc  bonus_part.cc  calc_rpn.cc  calculator.cc  calculator.h  calculatorRpn.cc  calculatorRpn.h  creditCalculator.cc  creditCalculator.h  depositCalculator.cc  depositCalculator.h  flipStack.cc  flipStack.h  graphCalculator.cc  graphCalculator.h  main_c.c  main_c.cc  model.cc  model.h  parcer.cc  parcer.h  shuntingYard.cc  shuntingYard.h  shunting_yard.c  shunting_yard.cc  stack.cc  token.cc  token.h  unaryReplacer.cc  unaryReplacer.h  validator.cc  validator.h
src/model/calculator/: CMakeLists.txt  calculator.cc  calculator.h  expressionToTokens.cc  expressionToTokens.h  multiCalculator.cc  multiCalculator.h  singleCalculator.cc  singleCalculator.h
src/model/credit/: CMakeLists.txt  creditCalculator.cc  creditCalculator.h
src/model/deposit/: CMakeLists.txt  depositCalculator.cc  depositCalculator.h
src/model/graph/: CMakeLists.txt  graphCalculator.cc  graphCalculator.h
src/model/parcer/: CMakeLists.txt  parcer.cc  parcer.h  token.cc  token.h  unaryReplacer.cc  unaryReplacer.h  validator.cc  validator.h
src/model/rpn/: CMakeLists.txt  calculatorRpn.cc  calculatorRpn.h  flipStack.cc  flipStack.h  multiCalculatorRpn.cc  multiCalculatorRpn.h  shuntingYard.cc  shuntingYard.h
src/protocol/: protocol.h
src/tests/: test.c  test.cc  test_calculation.cc  test_credit.cc  test_deposit.cc  test_graph.cc  test_parcer.cc  test_validator.cc  tests_main.cc
src/view/: CMakeLists.txt  credit_calc.cc  credit_calc.cpp  credit_calc.h  credit_calc.ui  deposit_calc.cc  deposit_calc.cpp  deposit_calc.h  deposit_calc.ui  main.cpp  main_view.cc  main_view.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  mainwindow.ui  view.h
